--- a/index.html
+++ b/index.html
@@ -3,10 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>bienvenido a esta prueba/</title>
+<link rel="stylesheet" href="assets/icons/icomoon/style.css">
     <link rel="stylesheet" href="assets/icons/icomoon/styles.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-
+   <header>
+     <figure>
+       <img src="assets/images/logo-laboratoria.svg" alt="logo laboratria">
+     </figure>
+       <nav>
+         <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Servicios</a></li>
+        <li><a href="#">Premios</a></li>
+        <li><a href="#">Contactos</a></li>
+         </ul>
+       </nav>
+   </header>
+   <section>
+     <figure>
+<img src="assets/images/square-laboratoria.png" alt="logo laboratoria">
+     </figure>
+     <h1>Bienvenidos a esta prueba</h1>
+<button>conoce más</button>
+   </section>
+   <section>
+     <div>
+       <span></span>
+       <h3>Servicio web</h3>
+        <p>Entregamos un excelnte servicio</p>
+          </div>
+          <div>
+            <span></span>
+            <h3>Servicio web</h3>
+             <p>Entregamos un excelnte servicio</p>
+               </div>
+               <div>
+                 <span></span>
+                 <h3>Servicio web</h3>
+                  <p>Entregamos un excelnte servicio</p>
+                    </div>
+   </section>
+<footer>
+  <p>Realizado por Daphne</p>
+</footer>
   </body>
 </html>
