--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>bienvenido a esta prueba/</title>
-<link rel="stylesheet" href="assets/icons/icomoon/style.css">
-    <link rel="stylesheet" href="assets/icons/icomoon/styles.css">
+    <link rel="stylesheet" href="assets/icons/icomoon/style.css">
+    <link rel="stylesheet" href="assets/icons/icomoon/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+
   </head>
   <body>
    <header>
-     <figure>
-       <img src="assets/images/logo-laboratoria.svg" alt="logo laboratria">
+     <figure class="box header">
+       <img class="logo-header"src="assets/images/logo-laboratoria.svg" alt="logo laboratria">
      </figure>
-       <nav>
-         <ul>
+       <nav class="box-header">
+        <ul class="text-uppercase">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Servicios</a></li>
         <li><a href="#">Premios</a></li>
@@ -21,17 +23,18 @@
          </ul>
        </nav>
    </header>
+
    <section>
      <figure>
 <img src="assets/images/square-laboratoria.png" alt="logo laboratoria">
      </figure>
-     <h1>Bienvenidos a esta prueba</h1>
-<button>conoce más</button>
+     <h1 class="text-uppercase">Bienvenidos a esta prueba</h1>
+<button class="text-uppercase">conoce más</button>
    </section>
    <section>
      <div>
-       <span></span>
-       <h3>Servicio web</h3>
+       <span class="text-uppercase"></span>
+       <h3 class="text-uppercase">Servicio web</h3>
         <p>Entregamos un excelnte servicio</p>
           </div>
           <div>
